# IMU_Data_using_SignalProcessing

./: .gitignore  README.md  requirements.txt
report/: main.aux  main.tex  main.toc
src/phone_imu_bridge/: .coverage  README.md  package.xml  setup.py
src/phone_imu_bridge/analysis/: spectral_plots.ipynb
src/phone_imu_bridge/config/: params.yaml
src/phone_imu_bridge/launch/: imu_bridge.launch.py
src/phone_imu_bridge/phone_imu_bridge/: dsp_filters.py  http_receiver_node.py  inertial_nav_node.py  madgwick_filter_node.py  spectral_analysis_node.py  ws_bridge_node.py
src/phone_imu_bridge/scripts/: plot_imu_live.py
src/phone_imu_bridge/test/: conftest.py  test_dsp_filters.py  test_http_receiver.py  test_inertial_nav.py  test_madgwick_filter.py  test_spectral_analysis.py
src/phone_imu_bridge/webapp/: index.html  phone.html
src/phone_imu_bridge/webapp/css/: style.css
src/phone_imu_bridge/webapp/js/: app.js  orientation3d.js  phone.js  plots.js
